--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,10 @@
-name: Image Processing Workflow
+name: Text Recognition and Image Processing Workflow
 
 on: [push, pull_request]
 
 jobs:
-  build:
-
+  process_image:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -16,27 +14,49 @@ jobs:
       with:
         python-version: '3.x' # Specify the Python version
 
-    - name: Install dependencies
+    - name: Install dependencies for image processing
       run: |
         python -m pip install --upgrade pip
         pip install opencv-python matplotlib
 
-    - name: Run script
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgl1-mesa-glx  # Required for OpenCV
-        python image_processing.py
+    - name: Install OpenCV dependencies
+      run: sudo apt-get install -y libgl1-mesa-glx
 
-    - name: Upload logs
-      if: failure()
-      uses: actions/upload-artifact@v3
-      with:
-        name: logs
-        path: image_processing.py
+    - name: Run image processing script
+      run: python image_processing.py
 
-    - name: Upload result
+    - name: Upload processed image
       if: success()
       uses: actions/upload-artifact@v3
       with:
         name: processed-image
         path: dancing-spider-canny.png
+
+  text_recognition:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x' # Specify the Python version
+
+    - name: Install dependencies for text recognition
+      run: |
+        python -m pip install --upgrade pip
+        pip install opencv-python pytesseract
+
+    - name: Install Tesseract
+      run: sudo apt-get install -y tesseract-ocr
+
+    - name: Run text recognition script
+      run: python text_recognition.py
+
+    - name: Upload text recognition output
+      if: success()
+      uses: actions/upload-artifact@v3
+      with:
+        name: text-recognition-output
+        path: output.txt
