--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.11' # Specify the Python version
+        python-version: '3.11'
 
     - name: Install dependencies for image processing
       run: |
